layout issues

--- a/client/src/layout/AppLayout/AppLayout.module.css
+++ b/client/src/layout/AppLayout/AppLayout.module.css
@@ -1,4 +1,4 @@
-.layoutContainer {
+.layoutContent {
     display: flex;
 }
 
